lib/flutter_chardet_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `dart run tool/ffigen.dart`.

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import, unused_element, deprecated_member_use_from_same_package
import 'dart:ffi' as ffi;

@ffi.Native<ffi.IntPtr Function()>()
external int flutter_chardet_active_detectors();

@ffi.Native<ffi.Void Function(flutter_chardet_t)>()
external void flutter_chardet_data_end(flutter_chardet_t detector);

@ffi.Native<ffi.Void Function(flutter_chardet_t)>()
external void flutter_chardet_delete(flutter_chardet_t detector);

@ffi.Native<ffi.Float Function(flutter_chardet_t, ffi.Size)>()
external double flutter_chardet_get_confidence(
  flutter_chardet_t detector,
  int candidate,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(flutter_chardet_t, ffi.Size)>()
external ffi.Pointer<ffi.Char> flutter_chardet_get_encoding(
  flutter_chardet_t detector,
  int candidate,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(flutter_chardet_t, ffi.Size)>()
external ffi.Pointer<ffi.Char> flutter_chardet_get_language(
  flutter_chardet_t detector,
  int candidate,
);

@ffi.Native<ffi.Size Function(flutter_chardet_t)>()
external int flutter_chardet_get_n_candidates(flutter_chardet_t detector);

@ffi.Native<
  ffi.Int32 Function(flutter_chardet_t, ffi.Pointer<ffi.Uint8>, ffi.Size)
>()
external int flutter_chardet_handle_data(
  flutter_chardet_t detector,
  ffi.Pointer<ffi.Uint8> data,
  int length,
);

@ffi.Native<flutter_chardet_t Function()>()
external flutter_chardet_t flutter_chardet_new();

@ffi.Native<ffi.Void Function(flutter_chardet_t)>()
external void flutter_chardet_reset(flutter_chardet_t detector);

typedef flutter_chardet_t = ffi.Pointer<ffi.Void>;
